--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -36,8 +37,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.annotation:annotation:1.3.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -61,4 +60,11 @@ dependencies {
 
     // LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata:'+lifecycle_version
+
+    // Firebase BoM
+//    implementation 'com.google.firebase:firebase-bom:29.0.4'
+    // Firebase auth
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    // Google Play services
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 }
