--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     //Material dots indicator
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    //Number picker
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 }
