--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -13,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OHO.Launcher"
         android:usesCleartextTraffic="true">
+
+        <meta-data
+            android:name="com.google.android.API_KEY"
+            android:value="AIzaSyCZRJm_Xt287To1N4_ly2ExTZP8HyQskUk"/>
         <activity
             android:name=".views.registration.RegistrationActivity"
             android:exported="false" />
