--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,16 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+    }
+
+    sourceSets {
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
 
     buildTypes {
@@ -80,4 +90,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:19.0.1'
 
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
+    //room database
+    implementation 'androidx.room:room-runtime:2.4.1'
+    annotationProcessor 'androidx.room:room-compiler:2.4.1'
 }
