--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,6 @@ dependencies {
     //room database
     implementation 'androidx.room:room-runtime:2.4.1'
     annotationProcessor 'androidx.room:room-compiler:2.4.1'
+
+    implementation 'com.ms-square:expandableTextView:0.1.4'
 }
