--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.OHO.Launcher"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".views.home.CheckAvailabilityActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.settings.SafeDatingTipsActivity"
             android:exported="false" />
         <activity
