--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,6 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.4.1'
 
     implementation 'com.ms-square:expandableTextView:0.1.4'
+
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
