--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.OHO.Launcher"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".views.UpdateProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.home.CheckAvailabilityActivity"
             android:exported="false" />
         <activity
@@ -42,10 +45,10 @@
             android:name=".views.CompleteProfileActivity"
             android:exported="true">
 
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity> <!-- <meta-data -->
         <!-- android:name="com.google.android.API_KEY" -->
         <!-- android:value="AIzaSyCZRJm_Xt287To1N4_ly2ExTZP8HyQskUk"/> -->
@@ -59,11 +62,11 @@
         <activity
             android:name=".views.LoginActivity"
             android:exported="true">
-                        <intent-filter>
-                            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                            <category android:name="android.intent.category.LAUNCHER" />
-                        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".views.OnboardingActivity"
