--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding {
+            enabled = true
+        }
     }
 }
 
@@ -98,4 +101,7 @@ dependencies {
     implementation 'com.ms-square:expandableTextView:0.1.4'
 
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    //image picker library
+    implementation 'io.github.ParkSangGwon:tedimagepicker:1.2.8'
 }
