--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,9 +94,9 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
 
-    //room database
-    implementation 'androidx.room:room-runtime:2.4.1'
-    annotationProcessor 'androidx.room:room-compiler:2.4.1'
+//    //room database
+//    implementation 'androidx.room:room-runtime:2.4.1'
+//    annotationProcessor 'androidx.room:room-compiler:2.4.1'
 
     implementation 'com.ms-square:expandableTextView:0.1.4'
 
