feat: connect chat room api
feat: create shimmer progress view while the chat rooms are fetched

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     //image crop and edit library
     implementation 'com.github.krokyze:ucropnedit:2.2.8'
 
+    //shimmer layout
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
 
     //toggle button group library
