--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,4 +122,6 @@ dependencies {
     //Room Database
     implementation "androidx.room:room-runtime:2.2.5"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
+
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 }
