feat: new UI for setting up user profile

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,4 +124,6 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.2.5"
 
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
