--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,4 +126,5 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
