--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,4 +127,5 @@ dependencies {
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation "io.getstream:avatarview-coil:1.0.3"
 }
