--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.App.Starting"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".views.settings.PreferenceSettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.home.AddPromptActivity"
             android:exported="false" />
         <activity
