--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,4 +125,5 @@ dependencies {
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation "io.getstream:avatarview-coil:1.0.3"
     implementation "com.github.skydoves:powerspinner:1.2.7"
+    implementation 'com.jsibbold:zoomage:1.3.1'
 }
